<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mlaguirre.mtech.Registro">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cedula"
                    android:id="@+id/tvRegCedula"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegCedula"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:id="@+id/tvRegNombre"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegNombre"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    android:id="@+id/tvRegApellido"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegApellido"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"
                    android:id="@+id/tvRegDir"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegDir"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:id="@+id/tvRegTel"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegTel"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:id="@+id/tvRegEmail"
                    android:textSize="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    />
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/txtRegEmail"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    />

                <Button
                    android:id="@+id/btnRegBuscar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/buscar"
                    android:onClick="onClick"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnRegDatos"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/registrar"
                    android:onClick="onClick"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnRegModificar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/modificar"
                    android:onClick="onClick"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnRegCita"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/cita"
                    android:onClick="onClick"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnRegVolver"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/darker_gray"
                    android:text="@string/volver"
                    android:onClick="onClick"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>

</LinearLayout>
